// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserForm component for signup should render correctly 1`] = `
<div>
  <form>
    <InputWrapper
      error={null}
      inputId="username"
      inputValue=""
      labelValue="Username (you can only set this at sign up): "
      setInput={[Function]}
      type="text"
    />
    <InputWrapper
      error={null}
      inputId="email"
      inputValue=""
      labelValue="Email: "
      setInput={[Function]}
      type="email"
    />
    <InputWrapper
      error={null}
      inputId="password"
      inputValue=""
      labelValue="Password: "
      setInput={[Function]}
      type="password"
    />
    <InputWrapper
      error={null}
      inputId="password-confirmation"
      inputValue=""
      labelValue="Confirm Password: "
      setInput={[Function]}
      type="password"
    />
    <InputWrapper
      error={null}
      inputId="first-name"
      inputValue=""
      labelValue="First Name: "
      setInput={[Function]}
      type="text"
    />
    <InputWrapper
      error={null}
      inputId="last-name"
      inputValue=""
      labelValue="Last Name: "
      setInput={[Function]}
      type="text"
    />
    <div
      className="btn-wrapper"
    >
      <button
        className="user-form__btn"
        onClick={[Function]}
        type="submit"
      >
        Create Account
      </button>
    </div>
  </form>
</div>
`;

exports[`UserForm for editing user account should render correctly 1`] = `
<div>
  <form>
    <InputWrapper
      error={null}
      inputId="username"
      inputValue="ryto"
      labelValue="Username (you can only set this at sign up): "
      setInput={[Function]}
      type="text"
    />
    <InputWrapper
      error={null}
      inputId="email"
      inputValue="ryto@gmail.com"
      labelValue="Email: "
      setInput={[Function]}
      type="email"
    />
    <InputWrapper
      error={null}
      inputId="password"
      inputValue=""
      labelValue="Password: "
      setInput={[Function]}
      type="password"
    />
    <InputWrapper
      error={null}
      inputId="password-confirmation"
      inputValue=""
      labelValue="Confirm Password: "
      setInput={[Function]}
      type="password"
    />
    <InputWrapper
      error={null}
      inputId="first-name"
      inputValue="Ryto"
      labelValue="First Name: "
      setInput={[Function]}
      type="text"
    />
    <InputWrapper
      error={null}
      inputId="last-name"
      inputValue="Verkar"
      labelValue="Last Name: "
      setInput={[Function]}
      type="text"
    />
    <div
      className="btn-wrapper"
    >
      <button
        className="user-form__btn"
        onClick={[Function]}
        type="submit"
      >
        Update Account
      </button>
    </div>
  </form>
</div>
`;
